--- a/app/assets/stylesheets/style-main.css.erb
+++ b/app/assets/stylesheets/style-main.css.erb
@@ -183,7 +183,7 @@ from {
 
 .scrollbar-scroll {
   background: rgba(230,230,230, 0.3);
-  border: 1px solid black;
+  border: 1px solid yellow;
   width: 1.5em;
   box-sizing: border-box;
   position: relative;
