--- a/app/views/layouts/_slidersContent.html.erb
+++ b/app/views/layouts/_slidersContent.html.erb
@@ -2,28 +2,26 @@
 
   assets_dir = 'images/' #base directory of all assets
   #used to be 'app/assets/images/' 
-     active_slide_class = 'active-slide' #HTML class to be used for the active slide - This is used by the javascript and css to display and style things.
-     full_dir = "#{assets_dir}" + "#{@image_dir}" #image_dir is provided by the respective partial
+  active_slide_class = 'active-slide' #HTML class to be used for the active slide - This is used by the javascript and css to display and style things.
+  full_dir = "#{assets_dir}" + "#{@image_dir}" #image_dir is provided by the respective partial
    #  full_dir = asset_path full_dir
     # active_slide = 1 # 1-indexed number of the active slide. Later it will be dynamic
 
     #Use the counter to determine what slide is the active one and set its class below.
-    counter = 0
-    if params[:id].nil?
+  counter = 0
+
+  if params[:id].nil?
         active_slide = 1
-    else
-        active_slide = params[:id]
-        active_slide = active_slide.to_i
-    end
+  else
+      active_slide = params[:id]
+      active_slide = active_slide.to_i
+  end
 
     
   #files_in_folder = Dir[File.join(full_dir, '**', '*')].count { |file| File.file?(file) } #Counts the amount of files in the directory determined by the active tab
   #the loop below loops creates files_in_folder amount of divs that contain an image element, whose source is full_dir/<NUMBER OF SLIDE>.jpg. Additionally, for the active slide, it adds the active_slide_class value
 
   #s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: 'images/peopleSlides').contents.map(&:key).slice(1..-1).count
- 
-
-
 
   #does a request to our s3 bucket using the AWS-SDK. Prefix is the "directory", contents is the part of the full response that lists the files inside
   #our bucket that match our constraints. In this case, the "prefix" helps us get only the "directory" we want within the bucket.
@@ -56,7 +54,7 @@
 
   <% else %>
     <%= content_tag :div, class: "#{@tab_value}" do -%>
-      <%= image_tag("#{@image_dir}/#{slide}") -%>
+      <%#= image_tag("#{@image_dir}/#{slide}-placeholder") -%>
     <% end -%>
   <% end %>
 
