Now creates the correct HTML for me to modify it with javascript on the client side both in development and in production

--- a/app/views/layouts/_slidersContent.html.erb
+++ b/app/views/layouts/_slidersContent.html.erb
@@ -37,19 +37,16 @@
     files_in_folder.delete_if {|file| "#{file}" === ""}
   else
    files_in_folder = Dir.entries("#{full_dir}/") - %w[. ..] #remove dots.
+   files_in_folder.map! { |file| file = "#{full_dir}/#{file}" }
   end
   
-  #to be taken out, just trying for dev
-  #size_prefixes = [100, 480, 700, 900, 1100, 1500, 2000] #should be the same as the admin_controller#upload_file ones.
-
-  s3 = Aws::S3::Client.new
-  files_in_folder = s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: full_dir).contents.map(&:key)
+  #s3 = Aws::S3::Client.new
+  #files_in_folder = s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: full_dir).contents.map(&:key)
 
   original_files = Array.new #will contain the base filename of each photo
   sizes_per_file = Hash.new #A hash with the following structure = "filename" => [available image sizes] } 
 
   files_in_folder.select{ |key| key.start_with?("#{full_dir}/original-")}.map do |key|
-  # debugger
 
       base_file = key.gsub("#{full_dir}/original-", '')
       versions = Array.new #Will include all the available versions of the file (depending on base_file dimensions)
@@ -57,9 +54,7 @@
       files_in_folder.select { |file_route| file_route.include?(base_file) }.map do |version|
 
         #base_filename as hashkey, [version] as value
-       # debugger
         to_add = version.gsub("#{full_dir}/", '') #removes the file route
-             #  debugger
         to_add = to_add.gsub("-#{base_file}", '') #removes the dash that separates the base filename and the filename itself
  
         if to_add != "original"  #don't add the "original" string to the array.
@@ -69,23 +64,13 @@
       end
 
       original_files.push base_file #adds the base file to the original files Array
-      sizes_per_file[base_file] = versions #creates an entry in the sizes_per_file hash for the file we just added, listing
+      sizes_per_file[base_file] = versions.sort! {|a,z| z.to_i <=> a.to_i } #creates an entry in the sizes_per_file hash for the file we just added, listing
       #its available sizes
 
   end
-
-
-
-
   original_files.sort! {|a,z| a.to_i <=> z.to_i}
   
 %>
-
-
-<%# maybe I could save a list of available sizes for each image, send them to the front end
-and program JS to decide what to use depending on size availability and clientWidth? %>
-
-<%# create a hash  {full_image_path => [1100, 900, 700, 480, 100] for example? So we have a list of available sizes per image %>
 
 <% original_files.each do |slide| %> 
     <% counter += 1 %>
