Fixes routes on production iamges

--- a/app/views/layouts/_slidersContent.html.erb
+++ b/app/views/layouts/_slidersContent.html.erb
@@ -4,7 +4,7 @@
   #used to be 'app/assets/images/' 
   active_slide_class = 'active-slide' #HTML class to be used for the active slide - This is used by the javascript and css to display and style things.
   full_dir = "#{assets_dir}#{@image_dir}" #image_dir is provided by the respective partial
-  public = "public/" #Yes it's dumb I have to add and remove this but the rails image Helpers wont play nice with my S3 file structure
+  public_folder = "public/" #Yes it's dumb I have to add and remove this but the rails image Helpers wont play nice with my S3 file structure
 
    #  full_dir = asset_path full_dir
     # active_slide = 1 # 1-indexed number of the active slide. Later it will be dynamic
@@ -29,24 +29,24 @@
   #does a request to our s3 bucket using the AWS-SDK. Prefix is the "directory", contents is the part of the full response that lists the files inside
   #our bucket that match our constraints. In this case, the "prefix" helps us get only the "directory" we want within the bucket.
   #contents.map(&:key) presents only the key (so its like the root + included files). the slice method is added to exclude the 0 index, which is the "root" of the directory
- 
+
   if Rails.env.production?
     s3 = Aws::S3::Client.new
     files_in_folder = s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: full_dir).contents.map(&:key)
-
+ #this below is wrong.
     files_in_folder.each do |file|
-        file.gsub!("#{full_dir}/", "")#remove the dir from the key (file) name
+     #   file.gsub!("#{full_dir}/", "")#remove the dir from the key (file) name
     end
-    files_in_folder.delete_if {|file| "#{file}" === ""}
+    #files_in_folder.delete_if {|file| "#{file}" === ""}
   else
-    full_dir = "#{public}#{full_dir}"
+    full_dir = "#{public_folder}#{full_dir}"
     files_in_folder = Dir.entries("#{full_dir}/") - %w[. ..] #remove dots.
     files_in_folder.map! { |file| file = "#{full_dir}/#{file}" }
   end
 
   #currently in dev the background is taken from public/images/background and the rest of iamges are taken from Rails.root/images
   #this is due to me prioritizing the route format of the S3 bucket.
-  
+
   #s3 = Aws::S3::Client.new
   #files_in_folder = s3::list_objects(bucket:ENV['AWS_S3_BUCKET'], prefix: full_dir).contents.map(&:key)
   
@@ -76,6 +76,7 @@
       #its available sizes
 
   end
+ # debugger
   original_files.sort! {|a,z| a.to_i <=> z.to_i}
 
 %>
@@ -89,14 +90,15 @@
       <%#  resets the full_dir so "public/" isn't added twice since image_tag auto adds it. 
             Probably should have used just old HTML but at least I learned a bit about the asset_path
             I guess %>
-        <% full_dir = "#{assets_dir}/#{@image_dir}" %>
+        <% full_dir = "#{assets_dir}#{@image_dir}" %>
       <% end %>
 
       <%# tbh it would have taken less time to just use normal html instead of the image_tag helpers.... %>
 
       <%= content_tag :div, class: "#{@tab_value} #{active_slide_class}" do %>
               <%= render 'layouts/loadAnim' %> 
-        <%= image_tag("", id: "#{full_dir}/#{slide}", data: {sizes: sizes_per_file[slide], route: "#{full_dir}" , file: "#{slide}" } ) %>
+        <%= image_tag("", id: "#{full_dir}/#{slide}", data: {sizes: sizes_per_file[slide], route: "#{asset_path full_dir}" , file: "#{slide}" } ) %>
+      
         <%# añadir locals a loadAnim para poder ocultar solo una (la relacionada a la slide q corresponda)%>
 
       <% end %>
