changes selection mode i nthe file manager

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -1223,7 +1223,7 @@ box-sizing: border-box;
 }
 
 .post-sidebar-menu {
-  height: auto;
+  height: 0 auto auto auto;
   width: 100%;
   margin: auto auto auto auto; 
   display: flex;
